--- a/DigitalAppaloosa.UserInterface/Shell.xaml
+++ b/DigitalAppaloosa.UserInterface/Shell.xaml
@@ -1,13 +1,15 @@
-﻿<Window x:Class="DigitalAppaloosa.UserInterface.Shell"
+﻿<RibbonWindow x:Class="DigitalAppaloosa.UserInterface.Shell"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DigitalAppaloosa.UserInterface"
-        xmlns:Regions="http://www.codeplex.com/prism"
+        xmlns:prism="http://www.codeplex.com/prism"
+        xmlns:int="clr-namespace:DigitalAppaloosa.Interfaces;assembly=DigitalAppaloosa.Interfaces"
         mc:Ignorable="d"
         Title="Shell" Height="800" Width="600">
     <Grid>
-        <ItemsControl Name="MainRegion" Regions:RegionManager.RegionName="MainRegion"/>
+        <!--<ItemsControl Name="MainRegion" prism:RegionManager.RegionName="{x:Static int:RegionNames.MainContentRegion}"/>-->
+        <ItemsControl Name="MainRegion" prism:RegionManager.RegionName="{x:Static int:RegionNames.MainContentRegion }"/>
     </Grid>
-</Window>
+</RibbonWindow>
