--- a/DigitalAppaloosa.UserInterface/Shell.xaml
+++ b/DigitalAppaloosa.UserInterface/Shell.xaml
@@ -9,7 +9,7 @@
         mc:Ignorable="d"
         Title="Shell" Height="800" Width="600">
     <Grid>
-        <!--<ItemsControl Name="MainRegion" prism:RegionManager.RegionName="{x:Static int:RegionNames.MainContentRegion}"/>-->
+        <Ribbon Name="ShellRibbon" prism:RegionManager.RegionName="{x:Static int:RegionNames.RibbonRegion }"/>
         <ItemsControl Name="MainRegion" prism:RegionManager.RegionName="{x:Static int:RegionNames.MainContentRegion }"/>
     </Grid>
 </RibbonWindow>
