--- a/Modules/DigitalAppaloosa.Modules.Drafting/Views/HeadDraftingPaneView.xaml
+++ b/Modules/DigitalAppaloosa.Modules.Drafting/Views/HeadDraftingPaneView.xaml
@@ -3,11 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:local="clr-namespace:DigitalAppaloosa.Modules.Drafting.Views"
+             xmlns:behaviors="clr-namespace:DigitalAppaloosa.Windows.Behaviors;assembly=DigitalAppaloosa.Windows"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <ItemsControl  ItemsSource="{Binding Items}">
+            <i:Interaction.Behaviors>
+                <behaviors:DraftingBehavior />
+                <behaviors:DragDropBehavior />
+            </i:Interaction.Behaviors>
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <Canvas />
