--- a/Modules/DigitalAppaloosa.Modules.Experimental/Views/RibbonTabTestAView.xaml
+++ b/Modules/DigitalAppaloosa.Modules.Experimental/Views/RibbonTabTestAView.xaml
@@ -1,15 +1,19 @@
 ﻿<RibbonTab x:Class="DigitalAppaloosa.Modules.Experimental.Views.RibbonTabTestAView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:DigitalAppaloosa.Modules.Experimental.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300"
+           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+           xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+           xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+           xmlns:local="clr-namespace:DigitalAppaloosa.Modules.Experimental.Views"
+           mc:Ignorable="d"
+           d:DesignHeight="300"
+           d:DesignWidth="300"
            Header="TestRibbonA">
     <RibbonGroup Header="TestGroupA">
-        <RibbonButton Label="Button A" Command="{Binding ButtonACommand}" />
-        <RibbonButton Label="Button B" Command="{Binding ButtonBCommand}" />
-        <RibbonButton Label="Button C" Command="{Binding ButtonCCommand}" />
+        <RibbonButton Label="Button A"
+                      Command="{Binding ButtonACommand}" />
+        <RibbonButton Label="Button B"
+                      Command="{Binding ButtonBCommand}" />
+        <RibbonButton Label="Button C"
+                      Command="{Binding ButtonCCommand}" />
     </RibbonGroup>
 </RibbonTab>
