--- a/DigitalAppaloosa.UserInterface/Shell.xaml
+++ b/DigitalAppaloosa.UserInterface/Shell.xaml
@@ -1,15 +1,30 @@
 ﻿<RibbonWindow x:Class="DigitalAppaloosa.UserInterface.Shell"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DigitalAppaloosa.UserInterface"
-        xmlns:prism="http://www.codeplex.com/prism"
-        xmlns:int="clr-namespace:DigitalAppaloosa.Interfaces;assembly=DigitalAppaloosa.Interfaces"
-        mc:Ignorable="d"
-        Title="Shell" Height="800" Width="600">
+              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+              xmlns:local="clr-namespace:DigitalAppaloosa.UserInterface"
+              xmlns:prism="http://www.codeplex.com/prism"
+              xmlns:int="clr-namespace:DigitalAppaloosa.Interfaces;assembly=DigitalAppaloosa.Interfaces"
+              mc:Ignorable="d"
+              Title="Shell"
+              Height="800"
+              Width="600">
     <Grid>
-        <Ribbon Name="ShellRibbon" prism:RegionManager.RegionName="{x:Static int:RegionNames.RibbonRegion }"/>
-        <ItemsControl Name="MainRegion" prism:RegionManager.RegionName="{x:Static int:RegionNames.MainContentRegion }"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Ribbon Name="ShellRibbon"
+                prism:RegionManager.RegionName="{x:Static int:RegionNames.RibbonRegion }" />
+        <ItemsControl Grid.Row="1"
+                      Name="MainRegion"
+                      prism:RegionManager.RegionName="{x:Static int:RegionNames.MainContentRegion }">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <Grid />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+        </ItemsControl>
     </Grid>
 </RibbonWindow>
