--- a/Modules/DigitalAppaloosa.Modules.Experimental/Views/RibbonGroupTestBView.xaml
+++ b/Modules/DigitalAppaloosa.Modules.Experimental/Views/RibbonGroupTestBView.xaml
@@ -1,13 +1,14 @@
 ﻿<RibbonGroup x:Class="DigitalAppaloosa.Modules.Experimental.Views.RibbonGroupTestBView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:DigitalAppaloosa.Modules.Experimental.Views"
              xmlns:prism="http://www.codeplex.com/prism"
              xmlns:int="clr-namespace:DigitalAppaloosa.Interfaces;assembly=DigitalAppaloosa.Interfaces"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300"
+             mc:Ignorable="d"
+             d:DesignHeight="300"
+             d:DesignWidth="300"
              prism:RegionManager.RegionName="{x:Static int:RegionNames.RibbonGroupRegion }"
-             Header="TestGroup DEF">   
+             Header="TestGroup DEF">
 </RibbonGroup>
