--- a/Modules/DigitalAppaloosa.Modules.Experimental/Views/RibbonGroupTestAView.xaml
+++ b/Modules/DigitalAppaloosa.Modules.Experimental/Views/RibbonGroupTestAView.xaml
@@ -1,17 +1,18 @@
-﻿<RibbonGroup x:Class="DigitalAppaloosa.Modules.Experimental.Views.RibbonGroupTestAView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:DigitalAppaloosa.Modules.Experimental.Views"
-             mc:Ignorable="d"
-             d:DesignHeight="300"
-             d:DesignWidth="300"
-             Header="TestGroup ABC">
-    <RibbonButton Label="Button A"
-                  Command="{Binding ButtonACommand}" />
-    <RibbonButton Label="Button B"
-                  Command="{Binding ButtonBCommand}" />
-    <RibbonButton Label="Button C"
-                  Command="{Binding ButtonCCommand}" />
-</RibbonGroup>
+﻿<Fluent:RibbonGroupBox x:Class="DigitalAppaloosa.Modules.Experimental.Views.RibbonGroupTestAView"
+                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                       xmlns:Fluent="clr-namespace:Fluent;assembly=Fluent"
+                       xmlns:local="clr-namespace:DigitalAppaloosa.Modules.Experimental.Views"
+                       mc:Ignorable="d"
+                       d:DesignHeight="300"
+                       d:DesignWidth="300"
+                       Header="TestGroup ABC">
+    <Fluent:Button Header="Button A"
+                   Command="{Binding ButtonACommand}" />
+    <Fluent:Button Header="Button B"
+                   Command="{Binding ButtonBCommand}" />
+    <Fluent:Button Header="Button C"
+                   Command="{Binding ButtonCCommand}" />
+</Fluent:RibbonGroupBox>
