--- a/Modules/DigitalAppaloosa.Modules.Experimental/Views/RibbonTestAView.xaml
+++ b/Modules/DigitalAppaloosa.Modules.Experimental/Views/RibbonTestAView.xaml
@@ -1,14 +1,15 @@
-﻿<RibbonTab x:Class="DigitalAppaloosa.Modules.Experimental.Views.RibbonTestAView"
-           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-           xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-           xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-           xmlns:local="clr-namespace:DigitalAppaloosa.Modules.Experimental.Views"
-           xmlns:prism="http://www.codeplex.com/prism"
-           xmlns:int="clr-namespace:DigitalAppaloosa.Contracts;assembly=DigitalAppaloosa.Contracts"
-           mc:Ignorable="d"
-           d:DesignHeight="300"
-           d:DesignWidth="300"
-           prism:RegionManager.RegionName="{x:Static int:RegionNames.RibbonTabRegion }"
-           Header="TestTab B">
-</RibbonTab>
+﻿<Fluent:RibbonTabItem x:Class="DigitalAppaloosa.Modules.Experimental.Views.RibbonTestAView"
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                      xmlns:local="clr-namespace:DigitalAppaloosa.Modules.Experimental.Views"
+                      xmlns:prism="http://www.codeplex.com/prism"
+                      xmlns:Fluent="clr-namespace:Fluent;assembly=Fluent"
+                      xmlns:int="clr-namespace:DigitalAppaloosa.Contracts;assembly=DigitalAppaloosa.Contracts"
+                      mc:Ignorable="d"
+                      d:DesignHeight="300"
+                      d:DesignWidth="300"
+                      prism:RegionManager.RegionName="{x:Static int:RegionNames.RibbonTabRegion }"
+                      Header="TestTab B">
+</Fluent:RibbonTabItem>
