--- a/Modules/DigitalAppaloosa.Modules.Experimental/Views/RibbonGroupTestBView.xaml
+++ b/Modules/DigitalAppaloosa.Modules.Experimental/Views/RibbonGroupTestBView.xaml
@@ -1,4 +1,4 @@
-﻿<Fluent:RibbonTabItem  x:Class="DigitalAppaloosa.Modules.Experimental.Views.RibbonGroupTestBView"
+﻿<Fluent:RibbonGroupBox  x:Class="DigitalAppaloosa.Modules.Experimental.Views.RibbonGroupTestBView"
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -12,4 +12,4 @@
                        d:DesignWidth="300"
                        prism:RegionManager.RegionName="{x:Static int:RegionNames.RibbonGroupRegion }"
                        Header="TestGroup DEF">
-</Fluent:RibbonTabItem>
+</Fluent:RibbonGroupBox>
